--- a/app/public/style.css
+++ b/app/public/style.css
@@ -9,6 +9,14 @@ h1 {
     font-size: 48px%;
     font-family: fantasy; 
 }
+
+h2 {
+    color: goldenrod; 
+}
+
+h3 {
+    color: goldenrod; 
+}
 button {
 
     background-color: yellow;
