--- a/app/public/style.css
+++ b/app/public/style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: honeydew;
+}
+
 .jumbotron {
     background: url("http://bgfons.com/uploads/paint/paint_texture2173.jpg");
     background-color: rgb(202, 79, 79);
@@ -22,13 +26,9 @@ h4, h5 {
     font-size: 25px;
 }
 
+.submitButton {
 
+    margin-top: 25px;
 
-.section {
-    padding: 
-    
 }
-        .submitButton {
-        
-        margin-top: 27px;
-        }
+   
